[package]
name = "reclaw-core"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Reclaw Core: Rust gateway runtime forked from OpenClaw"
repository = "https://github.com/themondays/reclaw"

[lints.clippy]
all = { level = "warn", priority = -1 }
redundant_clone = "warn"
clone_on_copy = "warn"
cloned_instead_of_copied = "warn"

[lints.rust]
rust_2018_idioms = "warn"
unused_lifetimes = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"

[lints.rustdoc]
broken_intra_doc_links = "warn"
bare_urls = "warn"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
chrono = { version = "0.4.42", default-features = true, features = ["clock", "serde"] }
clap = { version = "4.5.60", features = ["derive", "env"] }
futures-util = "0.3.32"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "json"] }
subtle = "2.6.1"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["fs", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7.16", features = ["rt"] }
toml = "0.8.23"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.21.0", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.23.0"
tokio-tungstenite = "0.28.0"
